--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,9 +3,9 @@ Type: Package
 Title: Simple computation of powers
 Version: 0.1.0
 Authors@R: person("Wenzheng", "Zhou", email="wenzheng.zhou@mail.stat.ubc.ca", role=c("aut", "cre"))
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
+Maintainer: The package maintainer <wenzheng.zhou@stat.ubc.ca>
+Description: The package is used to do transformation on vectors.
+    Cube, Square, Box-Cox and Box-cox inverse transformation are included.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
